--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="social-icons">
                 <a href="https://www.facebook.com/share/eRo9g7nvwr22zTnA/"><i class="fa-brands fa-facebook"></i></a>
                 <a href="https://www.linkedin.com/in/k-jeevan-kumar-5333b32b8"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/k-jeevan-kumar-5333b32b8?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/k_jeevan_kumar_944?igsh=ZHB0Ym14MDc3aGlq"><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href= "K JEEVAN KUMAR RESUME.pdf" download class="btn btn2">Download Resume</a>
